# kaggle-aimo2

./: .env.example  .gitignore  LICENSE  README.md  huikang.md  pyproject.toml  vastai.md
aimo2/: bon.py  fake_prm_server.py  huikang.py  maj.py  parser.py  quantize.py  submit.py  timer.py  utils.py  validate.py
aimo2/benchmark/: batch_saturation.py  local_vllm_tp.py  openai_nginx.py  think_verbosity.py
aimo2/parser/: latex.lark  latex.py
nginx/conf/: nginx.conf
notebooks/: ds.ipynb  evaluation.ipynb  latex.ipynb  oai.ipynb  prm.ipynb  prm2.ipynb  sympy.ipynb
scripts/: download_data.sh  format.sh  start_vllm.sh  start_vllm_bon.sh  start_vllm_maj.sh
tests/: test_boxed_parser.py  test_latex_to_int.py  test_latex_to_number.py
