[project]
name = "kaggle-aimo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "datasets>=3.2.0",
    "grpcio>=1.70.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "sympy>=1.13.1",
    "torch>=2.3.0",
    "transformers>=4.48.1",
    "vllm==0.7.1",
    "wandb>=0.19.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "kaggle>=1.6.17",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.ruff]
exclude = ["kaggle_evaluation/**"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["aimo2", "kaggle_evaluation"] # allow importable from anywhere
